--- a/index.html
+++ b/index.html
@@ -18,59 +18,59 @@
   </head>
   <body class="text-gray-800">
     <!-- Hero Section -->
-    <section class="text-center py-16 px-4">
+    <section class="text-center py-12 px-4 md:py-20">
       <img
         src="./molang_banner.png"
         alt="Molang Banner"
-        class="mx-auto max-w-xl mb-6 rounded-lg shadow-xl"
+        class="mx-auto w-full max-w-3xl mb-6 rounded-lg shadow-xl"
       />
       <h1 class="text-4xl md:text-6xl text-pink-600">MOLANG on Bonk</h1>
-      <p class="mt-6 max-w-2xl mx-auto text-lg">
+      <p class="mt-6 max-w-2xl mx-auto text-base sm:text-lg">
         The cute and popular bunny, Molang is coming to live on Solana. A wholesome,
         community-driven memecoin inspired by Molang’s mini series, the adorable round bunny
         who spreads joy and positivity everywhere.
       </p>
-      <p class="mt-4 text-xl font-semibold text-pink-700">
+      <p class="mt-4 text-lg sm:text-xl font-semibold text-pink-700">
         $MOLANG is here to deliver pure good vibes, cuteness, and collective wins.
       </p>
-      <p class="mt-2 text-sm">
+      <p class="mt-2 text-sm max-w-xl mx-auto px-2">
         Because sometimes you don’t need utility—just good vibes, a cute mascot, and a reminder to
         stay soft and happy while your bags go up.
       </p>
       <button
         onclick="document.getElementById('presaleModal').classList.remove('hidden')"
-        class="mt-8 px-6 py-3 bg-pink-600 text-white rounded-full hover:bg-pink-500"
+        class="mt-8 px-6 py-3 bg-pink-600 text-white rounded-full hover:bg-pink-500 transition"
       >
         Join Presale
       </button>
     </section>
 
     <!-- Mascot Image -->
-    <section class="text-center">
+    <section class="text-center mb-12">
       <img
         src="./molang_mascot.png"
         alt="Molang Mascot"
-        class="mx-auto w-40 h-40 rounded-full border-4 border-pink-300 shadow-md"
+        class="mx-auto w-32 h-32 sm:w-40 sm:h-40 rounded-full border-4 border-pink-300 shadow-md"
       />
     </section>
 
     <!-- Tokenomics -->
-    <section class="py-16 px-6">
+    <section class="py-16 px-4 sm:px-6">
       <h2 class="text-3xl text-center text-purple-600 mb-8">Tokenomics</h2>
-      <div class="max-w-4xl mx-auto grid md:grid-cols-2 gap-6">
-        <div class="p-6 bg-white rounded-lg shadow">
+      <div class="max-w-5xl mx-auto grid gap-6 sm:grid-cols-2">
+        <div class="p-6 bg-white rounded-lg shadow text-center">
           <h3 class="text-xl text-pink-500">Total Supply</h3>
           <p class="text-lg">1,000,000,000 $MOLANG</p>
         </div>
-        <div class="p-6 bg-white rounded-lg shadow">
+        <div class="p-6 bg-white rounded-lg shadow text-center">
           <h3 class="text-xl text-pink-500">Liquidity</h3>
           <p class="text-lg">80% Locked Forever</p>
         </div>
-        <div class="p-6 bg-white rounded-lg shadow">
+        <div class="p-6 bg-white rounded-lg shadow text-center">
           <h3 class="text-xl text-pink-500">Team</h3>
           <p class="text-lg">5% (Vested over 6 months)</p>
         </div>
-        <div class="p-6 bg-white rounded-lg shadow">
+        <div class="p-6 bg-white rounded-lg shadow text-center">
           <h3 class="text-xl text-pink-500">Marketing</h3>
           <p class="text-lg">15% Community Campaigns</p>
         </div>
@@ -78,20 +78,28 @@
     </section>
 
     <!-- Meme/Lore Slider -->
-    <section class="bg-pink-50 py-16">
+    <section class="bg-pink-50 py-16 px-4">
       <h2 class="text-3xl text-center text-pink-700 mb-8">Lore & Meme Moments</h2>
-      <div class="overflow-x-auto flex gap-6 px-6">
-        <div class="min-w-[250px] bg-white p-4 rounded shadow">🥕 Molang found Bonk treats!</div>
-        <div class="min-w-[250px] bg-white p-4 rounded shadow">🌈 Rainbow mode activated</div>
-        <div class="min-w-[250px] bg-white p-4 rounded shadow">🕶 Cool bunny in full send</div>
-        <div class="min-w-[250px] bg-white p-4 rounded shadow">🚀 $MOLANG hits new ATH!</div>
+      <div class="overflow-x-auto flex gap-4 sm:gap-6 px-2 sm:px-6 scrollbar-hide">
+        <div class="min-w-[200px] sm:min-w-[250px] bg-white p-4 rounded shadow text-center">
+          🥕 Molang found Bonk treats!
+        </div>
+        <div class="min-w-[200px] sm:min-w-[250px] bg-white p-4 rounded shadow text-center">
+          🌈 Rainbow mode activated
+        </div>
+        <div class="min-w-[200px] sm:min-w-[250px] bg-white p-4 rounded shadow text-center">
+          🕶 Cool bunny in full send
+        </div>
+        <div class="min-w-[200px] sm:min-w-[250px] bg-white p-4 rounded shadow text-center">
+          🚀 $MOLANG hits new ATH!
+        </div>
       </div>
     </section>
 
     <!-- Footer -->
-    <footer class="bg-pink-200 text-center py-8">
+    <footer class="bg-pink-200 text-center py-10 px-4">
       <h3 class="text-xl mb-4">Join the Vibe</h3>
-      <div class="flex justify-center gap-6">
+      <div class="flex flex-wrap justify-center gap-4 sm:gap-6 text-base">
         <a href="#" class="hover:text-pink-600">Twitter/X</a>
         <a href="#" class="hover:text-pink-600">Telegram</a>
         <a href="#" class="hover:text-pink-600">Discord</a>
@@ -101,23 +109,23 @@
     <!-- Presale Modal -->
     <div
       id="presaleModal"
-      class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center"
+      class="hidden fixed inset-0 z-50 bg-black bg-opacity-50 flex items-center justify-center p-4"
     >
-      <div class="bg-white p-8 rounded-lg w-full max-w-md relative">
+      <div class="bg-white w-full max-w-md p-6 sm:p-8 rounded-lg relative shadow-lg">
         <button
           onclick="document.getElementById('presaleModal').classList.add('hidden')"
-          class="absolute top-2 right-3 text-xl"
+          class="absolute top-2 right-3 text-2xl text-gray-600 hover:text-gray-800"
         >
           &times;
         </button>
-        <h2 class="text-2xl mb-4">Presale Now Live!</h2>
-        <p class="mb-4">
+        <h2 class="text-2xl mb-4 text-center">Presale Now Live!</h2>
+        <p class="mb-4 text-center">
           Buy $MOLANG on Uniswap using Solana Wallet. Presale ends soon — grab your cute bags!
         </p>
         <a
           href="https://uniswap.org/"
           target="_blank"
-          class="inline-block bg-pink-600 text-white px-6 py-2 rounded-full hover:bg-pink-500"
+          class="block text-center bg-pink-600 text-white px-6 py-2 rounded-full hover:bg-pink-500 transition"
         >
           Go to Presale
         </a>
